--- a/index.html
+++ b/index.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guess The Word</title>
+	<title>Master Rangers</title>
+<link rel="stylesheet" href="style.css">
+<script src="fabric.js"></script>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="game.css">
+
 </head>
-<body>
 
-<h4 id="player1_name"></h4> <span id="player1_score"></span>
-<br>
-<h4 id="player2_name"></h4> <span id="player2_score"></span>
-
-<div class="container">
+<body class="body_background">
 	<center>
-		<h2 style="color: white;">The Math Quiz Game!</h2>
-		<h3 id="player_question"></h3>
-		<h3 id="player_answer"></h3>
-		<div id="output" class="col-lg-6"> </div>
-		<br>
-		<br>
-		<h4>Number 1</h4>
-		<input type="text" id="number1" class="form-control" placeholder="Number 1">
-		<br>
-		<h4>Number 1</h4>
-		<input type="text" id="number2" class="form-control" placeholder="Number 2">
-		<br>
-		<button onclick="send()" class="btn btn-success" style="width: 30%;">Send</button>
+		<br></br>
+		<h3><i>Press <b>R, G, Y, P, B </b> to upload</i> Master Rangers</h3>	
+		<br></br>	
+		<!-- Create a canvas to add images-->
+<canvas id="myCanvas" width="1500" height="550"></canvas>		
 	</center>
-</div>
-
-<script src="game_page.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
